数据预处理

--- a/scripts/Data_preprocess/pre_obs.ipynb
+++ b/scripts/Data_preprocess/pre_obs.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "---\n",
     "*@author: Evan*\\\n",
-    "*@date: 2023-07-06*"
+    "*@date: 2023-08-08*"
    ]
   },
   {
@@ -25,6 +25,10 @@
     "import matplotlib.pyplot as plt\n",
     "import os\n",
     "\n",
+    "import sys\n",
+    "sys.path.append('../../src/')\n",
+    "from namelist import *\n",
+    "\n",
     "# silence the warning note\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
@@ -32,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -95,97 +99,97 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2023-06-01 00:00:00</th>\n",
+       "      <th>2023-07-01 00:00:00</th>\n",
        "      <td>安庆大学</td>\n",
-       "      <td>8</td>\n",
        "      <td>7</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.586</td>\n",
-       "      <td>84</td>\n",
-       "      <td>38</td>\n",
-       "      <td>39</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>1002.6</td>\n",
-       "      <td>23.7</td>\n",
-       "      <td>85</td>\n",
-       "      <td>0.000(BB)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-06-01 01:00:00</th>\n",
-       "      <td>安庆大学</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.636</td>\n",
-       "      <td>77</td>\n",
-       "      <td>37</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.392</td>\n",
        "      <td>41</td>\n",
-       "      <td>0.4</td>\n",
-       "      <td>346.2</td>\n",
-       "      <td>1002</td>\n",
-       "      <td>23.6</td>\n",
-       "      <td>86</td>\n",
-       "      <td>0.000(BB)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-06-01 02:00:00</th>\n",
-       "      <td>安庆大学</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.587</td>\n",
-       "      <td>80</td>\n",
-       "      <td>46</td>\n",
-       "      <td>37</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2.9</td>\n",
-       "      <td>1001.6</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>88</td>\n",
-       "      <td>0.000(BB)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-06-01 03:00:00</th>\n",
-       "      <td>安庆大学</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>8</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.571</td>\n",
-       "      <td>63</td>\n",
-       "      <td>43</td>\n",
-       "      <td>34</td>\n",
-       "      <td>0.5</td>\n",
-       "      <td>304.2</td>\n",
-       "      <td>1001</td>\n",
-       "      <td>23</td>\n",
-       "      <td>92</td>\n",
-       "      <td>0.000(BB)</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-06-01 04:00:00</th>\n",
-       "      <td>安庆大学</td>\n",
-       "      <td>7</td>\n",
-       "      <td>8</td>\n",
+       "      <td>20</td>\n",
        "      <td>9</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.558</td>\n",
-       "      <td>57</td>\n",
-       "      <td>40</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>34.8</td>\n",
+       "      <td>999.2</td>\n",
+       "      <td>24.9</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0.000(BB)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01 01:00:00</th>\n",
+       "      <td>安庆大学</td>\n",
+       "      <td>7</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.387</td>\n",
+       "      <td>42</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>999</td>\n",
+       "      <td>25</td>\n",
+       "      <td>96</td>\n",
+       "      <td>0.000(BB)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01 02:00:00</th>\n",
+       "      <td>安庆大学</td>\n",
+       "      <td>7</td>\n",
+       "      <td>14</td>\n",
+       "      <td>15</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.396</td>\n",
+       "      <td>36</td>\n",
+       "      <td>23</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>998.6</td>\n",
+       "      <td>24.9</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0.000(BB)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01 03:00:00</th>\n",
+       "      <td>安庆大学</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20</td>\n",
+       "      <td>22</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0.397</td>\n",
+       "      <td>31</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>51.1</td>\n",
+       "      <td>998.5</td>\n",
+       "      <td>24.6</td>\n",
+       "      <td>97</td>\n",
+       "      <td>0.000(BB)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-01 04:00:00</th>\n",
+       "      <td>安庆大学</td>\n",
+       "      <td>8</td>\n",
+       "      <td>16</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.386</td>\n",
        "      <td>32</td>\n",
-       "      <td>0.8</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>1000.9</td>\n",
-       "      <td>22.8</td>\n",
-       "      <td>93</td>\n",
+       "      <td>18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>37.2</td>\n",
+       "      <td>998.6</td>\n",
+       "      <td>24.4</td>\n",
+       "      <td>97</td>\n",
        "      <td>0.000(BB)</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
@@ -209,148 +213,148 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-06-30 19:00:00</th>\n",
+       "      <th>2023-07-31 19:00:00</th>\n",
        "      <td>高新区</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>13</td>\n",
-       "      <td>17</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.593</td>\n",
-       "      <td>59</td>\n",
-       "      <td>15</td>\n",
-       "      <td>6</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>193.2</td>\n",
-       "      <td>995.2</td>\n",
-       "      <td>25.3</td>\n",
-       "      <td>100</td>\n",
+       "      <td>0.448</td>\n",
+       "      <td>56</td>\n",
+       "      <td>27</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>308.5</td>\n",
+       "      <td>998.5</td>\n",
+       "      <td>28.7</td>\n",
+       "      <td>90</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-06-30 20:00:00</th>\n",
+       "      <th>2023-07-31 20:00:00</th>\n",
        "      <td>高新区</td>\n",
-       "      <td>-2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.459</td>\n",
+       "      <td>47</td>\n",
+       "      <td>19</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>320.5</td>\n",
+       "      <td>999</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>93</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-31 21:00:00</th>\n",
+       "      <td>高新区</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>11</td>\n",
        "      <td>14</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.538</td>\n",
-       "      <td>62</td>\n",
-       "      <td>12</td>\n",
-       "      <td>11</td>\n",
        "      <td>1</td>\n",
-       "      <td>263.5</td>\n",
-       "      <td>995.6</td>\n",
-       "      <td>25.1</td>\n",
-       "      <td>100</td>\n",
+       "      <td>0.524</td>\n",
+       "      <td>40</td>\n",
+       "      <td>24</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>291.2</td>\n",
+       "      <td>999.6</td>\n",
+       "      <td>27.9</td>\n",
+       "      <td>95</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2023-06-30 21:00:00</th>\n",
+       "      <th>2023-07-31 22:00:00</th>\n",
        "      <td>高新区</td>\n",
-       "      <td>-2</td>\n",
-       "      <td>9</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>10</td>\n",
        "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.542</td>\n",
-       "      <td>66</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.526</td>\n",
+       "      <td>39</td>\n",
+       "      <td>21</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>306.1</td>\n",
+       "      <td>1000.3</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>95</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-07-31 23:00:00</th>\n",
+       "      <td>高新区</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14</td>\n",
        "      <td>16</td>\n",
-       "      <td>12</td>\n",
        "      <td>1</td>\n",
-       "      <td>272</td>\n",
-       "      <td>996</td>\n",
-       "      <td>25</td>\n",
-       "      <td>100</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-06-30 22:00:00</th>\n",
-       "      <td>高新区</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>8</td>\n",
-       "      <td>11</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.517</td>\n",
-       "      <td>58</td>\n",
-       "      <td>12</td>\n",
-       "      <td>11</td>\n",
-       "      <td>1</td>\n",
-       "      <td>289.9</td>\n",
-       "      <td>996.4</td>\n",
-       "      <td>24.9</td>\n",
-       "      <td>100</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-06-30 23:00:00</th>\n",
-       "      <td>高新区</td>\n",
-       "      <td>-3</td>\n",
-       "      <td>9</td>\n",
-       "      <td>12</td>\n",
-       "      <td>2</td>\n",
-       "      <td>0.559</td>\n",
-       "      <td>54</td>\n",
-       "      <td>13</td>\n",
-       "      <td>12</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>298.3</td>\n",
-       "      <td>996.9</td>\n",
-       "      <td>25.1</td>\n",
-       "      <td>100</td>\n",
+       "      <td>0.508</td>\n",
+       "      <td>31</td>\n",
+       "      <td>14</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>289.1</td>\n",
+       "      <td>1000.4</td>\n",
+       "      <td>27.3</td>\n",
+       "      <td>99</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>14400 rows × 16 columns</p>\n",
+       "<p>14880 rows × 16 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                       站点 SO2 NO2 NOx NO     CO  O3 PM10 PM2.5   风速     风向  \\\n",
-       "datetime                                                                     \n",
-       "2023-06-01 00:00:00  安庆大学   8   7   8  0  0.586  84   38    39  0.5    6.5   \n",
-       "2023-06-01 01:00:00  安庆大学   8   8   8  0  0.636  77   37    41  0.4  346.2   \n",
-       "2023-06-01 02:00:00  安庆大学   7   6   7  0  0.587  80   46    37    1    2.9   \n",
-       "2023-06-01 03:00:00  安庆大学   8   8   8  1  0.571  63   43    34  0.5  304.2   \n",
-       "2023-06-01 04:00:00  安庆大学   7   8   9  0  0.558  57   40    32  0.8    2.5   \n",
-       "...                   ...  ..  ..  .. ..    ...  ..  ...   ...  ...    ...   \n",
-       "2023-06-30 19:00:00   高新区  -2  13  17  2  0.593  59   15     6  1.1  193.2   \n",
-       "2023-06-30 20:00:00   高新区  -2  11  14  2  0.538  62   12    11    1  263.5   \n",
-       "2023-06-30 21:00:00   高新区  -2   9  12  2  0.542  66   16    12    1    272   \n",
-       "2023-06-30 22:00:00   高新区  -3   8  11  2  0.517  58   12    11    1  289.9   \n",
-       "2023-06-30 23:00:00   高新区  -3   9  12  2  0.559  54   13    12  1.1  298.3   \n",
+       "                       站点  SO2 NO2 NOx NO     CO  O3 PM10 PM2.5   风速     风向  \\\n",
+       "datetime                                                                      \n",
+       "2023-07-01 00:00:00  安庆大学    7  16  17  1  0.392  41   20     9  0.4   34.8   \n",
+       "2023-07-01 01:00:00  安庆大学    7  16  17  1  0.387  42   14     9  0.6   27.9   \n",
+       "2023-07-01 02:00:00  安庆大学    7  14  15  1  0.396  36   23     9  0.4   15.6   \n",
+       "2023-07-01 03:00:00  安庆大学    7  20  22  2  0.397  31   19    10  0.5   51.1   \n",
+       "2023-07-01 04:00:00  安庆大学    8  16  17  1  0.386  32   18    10  0.7   37.2   \n",
+       "...                   ...  ...  ..  .. ..    ...  ..  ...   ...  ...    ...   \n",
+       "2023-07-31 19:00:00   高新区  NaN   8  10  2  0.448  56   27     4  2.3  308.5   \n",
+       "2023-07-31 20:00:00   高新区  NaN  10  12  1  0.459  47   19     4  2.3  320.5   \n",
+       "2023-07-31 21:00:00   高新区  NaN  11  14  1  0.524  40   24     6  1.2  291.2   \n",
+       "2023-07-31 22:00:00   高新区  NaN  10  12  1  0.526  39   21     6  1.4  306.1   \n",
+       "2023-07-31 23:00:00   高新区  NaN  14  16  1  0.508  31   14     7  1.4  289.1   \n",
        "\n",
-       "                         气压    气温   湿度        降水量  能见度  \n",
-       "datetime                                                \n",
-       "2023-06-01 00:00:00  1002.6  23.7   85  0.000(BB)  NaN  \n",
-       "2023-06-01 01:00:00    1002  23.6   86  0.000(BB)  NaN  \n",
-       "2023-06-01 02:00:00  1001.6  23.4   88  0.000(BB)  NaN  \n",
-       "2023-06-01 03:00:00    1001    23   92  0.000(BB)  NaN  \n",
-       "2023-06-01 04:00:00  1000.9  22.8   93  0.000(BB)  NaN  \n",
-       "...                     ...   ...  ...        ...  ...  \n",
-       "2023-06-30 19:00:00   995.2  25.3  100        NaN  NaN  \n",
-       "2023-06-30 20:00:00   995.6  25.1  100        NaN  NaN  \n",
-       "2023-06-30 21:00:00     996    25  100        NaN  NaN  \n",
-       "2023-06-30 22:00:00   996.4  24.9  100        NaN  NaN  \n",
-       "2023-06-30 23:00:00   996.9  25.1  100        NaN  NaN  \n",
+       "                         气压    气温  湿度        降水量  能见度  \n",
+       "datetime                                               \n",
+       "2023-07-01 00:00:00   999.2  24.9  97  0.000(BB)  NaN  \n",
+       "2023-07-01 01:00:00     999    25  96  0.000(BB)  NaN  \n",
+       "2023-07-01 02:00:00   998.6  24.9  97  0.000(BB)  NaN  \n",
+       "2023-07-01 03:00:00   998.5  24.6  97  0.000(BB)  NaN  \n",
+       "2023-07-01 04:00:00   998.6  24.4  97  0.000(BB)  NaN  \n",
+       "...                     ...   ...  ..        ...  ...  \n",
+       "2023-07-31 19:00:00   998.5  28.7  90        NaN  NaN  \n",
+       "2023-07-31 20:00:00     999  28.1  93        NaN  NaN  \n",
+       "2023-07-31 21:00:00   999.6  27.9  95        NaN  NaN  \n",
+       "2023-07-31 22:00:00  1000.3  27.8  95        NaN  NaN  \n",
+       "2023-07-31 23:00:00  1000.4  27.3  99        NaN  NaN  \n",
        "\n",
-       "[14400 rows x 16 columns]"
+       "[14880 rows x 16 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "xls=pd.read_excel('D:/data/Project_Anqing/202306/obsdata/originaldata.xlsx',header=0,na_values=['—',-99])\n",
+    "xls=pd.read_excel('D:/data/Project_Anqing/202307/obsdata/originaldata.xlsx',header=0,na_values=['—',-99])\n",
     "\n",
-    "xls['datetime'] = pd.to_datetime(xls['时间'].astype(str))\n",
+    "xls['datetime'] = pd.to_datetime(xls['日期'].astype(str)+'T'+xls['时间'].astype(str))\n",
     "\n",
-    "xls.drop(['城市','市县','时间'], axis=1, inplace=True)\n",
+    "xls.drop(['城市','市县','日期','时间'], axis=1, inplace=True)\n",
     "\n",
     "xls.set_index('datetime',inplace=True)\n",
     "xls"
@@ -358,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,28 +372,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "datetime\n",
-       "2023-06-01 00:00:00    100.5\n",
-       "2023-06-01 01:00:00    100.4\n",
-       "2023-06-01 02:00:00    100.4\n",
-       "2023-06-01 03:00:00    100.3\n",
-       "2023-06-01 04:00:00    100.3\n",
+       "2023-07-01 00:00:00    100.2\n",
+       "2023-07-01 01:00:00    100.1\n",
+       "2023-07-01 02:00:00    100.1\n",
+       "2023-07-01 03:00:00    100.1\n",
+       "2023-07-01 04:00:00    100.1\n",
        "                       ...  \n",
-       "2023-06-30 19:00:00    100.0\n",
-       "2023-06-30 20:00:00    100.1\n",
-       "2023-06-30 21:00:00    100.1\n",
-       "2023-06-30 22:00:00    100.1\n",
-       "2023-06-30 23:00:00    100.2\n",
-       "Name: 气压, Length: 720, dtype: float64"
+       "2023-07-31 19:00:00    100.4\n",
+       "2023-07-31 20:00:00    100.4\n",
+       "2023-07-31 21:00:00    100.5\n",
+       "2023-07-31 22:00:00    100.5\n",
+       "2023-07-31 23:00:00    100.5\n",
+       "Name: 气压, Length: 744, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,13 +415,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 根据站点分组导出\n",
     "grouped = xls.groupby('站点')\n",
-    "t_index=pd.date_range('2023-06-01T00','2023-06-30T23',freq='h')\n",
+    "t_index=pd.date_range(timestart,timeend,freq='h')\n",
     "\n",
     "for group_name, group_df in grouped:\n",
     "    # 时间序列如有缺失，则补充空值占位\n",
@@ -427,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,12 +441,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 将城区站与通道站分开\n",
-    "path = 'D:/data/Project_Anqing/202306/obsdata/'\n",
+    "path = 'D:/data/Project_Anqing/202307/obsdata/'\n",
     "\n",
     "urban_path=path + 'urban/'\n",
     "other_path=path + 'others/'\n",
