--- a/scripts/Export/section3.ipynb
+++ b/scripts/Export/section3.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "---\n",
     "*@author: Evan*\\\n",
-    "*@date: 2023-07-07*"
+    "*@date: 2023-08-09*"
    ]
   },
   {
@@ -190,41 +190,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "diag_O3 = np.zeros([720,21,number])\n",
-    "diag_NO2 = np.zeros([720,21,number])\n",
-    "diag_PM25 = np.zeros([720,21,number])\n",
-    "diag_ht = np.zeros([720,21,number])\n",
+    "timestep=744\n",
     "\n",
-    "diag_HADV = np.zeros([720,21,number])\n",
-    "diag_ZADV = np.zeros([720,21,number])\n",
-    "diag_HDIF = np.zeros([720,21,number])\n",
-    "diag_VDIF = np.zeros([720,21,number])\n",
-    "diag_DDEP = np.zeros([720,21,number])\n",
-    "diag_CHEM = np.zeros([720,21,number])\n",
+    "diag_O3 = np.zeros([timestep,21,number])\n",
+    "diag_NO2 = np.zeros([timestep,21,number])\n",
+    "diag_PM25 = np.zeros([timestep,21,number])\n",
+    "diag_ht = np.zeros([timestep,21,number])\n",
     "\n",
-    "diag_O3AnQ = np.zeros([720,21,number])\n",
-    "diag_O3AQI = np.zeros([720,21,number])\n",
-    "diag_O3AQT = np.zeros([720,21,number])\n",
-    "diag_O3AQA = np.zeros([720,21,number])\n",
-    "diag_O3AQP = np.zeros([720,21,number])\n",
-    "diag_O3OTH = np.zeros([720,21,number])\n",
-    "diag_O3ICO = np.zeros([720,21,number])\n",
-    "diag_O3BCO = np.zeros([720,21,number])\n",
+    "diag_HADV = np.zeros([timestep,21,number])\n",
+    "diag_ZADV = np.zeros([timestep,21,number])\n",
+    "diag_HDIF = np.zeros([timestep,21,number])\n",
+    "diag_VDIF = np.zeros([timestep,21,number])\n",
+    "diag_DDEP = np.zeros([timestep,21,number])\n",
+    "diag_CHEM = np.zeros([timestep,21,number])\n",
     "\n",
-    "diag_PMAnQ = np.zeros([720,21,number])\n",
-    "diag_PMAQI = np.zeros([720,21,number])\n",
-    "diag_PMAQT = np.zeros([720,21,number])\n",
-    "diag_PMAQA = np.zeros([720,21,number])\n",
-    "diag_PMAQP = np.zeros([720,21,number])\n",
-    "diag_PMOTH = np.zeros([720,21,number])\n",
-    "diag_PMICO = np.zeros([720,21,number])\n",
-    "diag_PMBCO = np.zeros([720,21,number])\n",
+    "diag_O3AnQ = np.zeros([timestep,21,number])\n",
+    "diag_O3AQI = np.zeros([timestep,21,number])\n",
+    "diag_O3AQT = np.zeros([timestep,21,number])\n",
+    "diag_O3AQA = np.zeros([timestep,21,number])\n",
+    "diag_O3AQP = np.zeros([timestep,21,number])\n",
+    "diag_O3OTH = np.zeros([timestep,21,number])\n",
+    "diag_O3ICO = np.zeros([timestep,21,number])\n",
+    "diag_O3BCO = np.zeros([timestep,21,number])\n",
     "\n",
-    "diag_HNO3 = np.zeros([720,21,number])\n",
-    "diag_H2O2 = np.zeros([720,21,number])\n",
-    "diag_u = np.zeros([720,21,number])\n",
-    "diag_v = np.zeros([720,21,number])\n",
-    "diag_w = np.zeros([720,21,number])"
+    "diag_PMAnQ = np.zeros([timestep,21,number])\n",
+    "diag_PMAQI = np.zeros([timestep,21,number])\n",
+    "diag_PMAQT = np.zeros([timestep,21,number])\n",
+    "diag_PMAQA = np.zeros([timestep,21,number])\n",
+    "diag_PMAQP = np.zeros([timestep,21,number])\n",
+    "diag_PMOTH = np.zeros([timestep,21,number])\n",
+    "diag_PMICO = np.zeros([timestep,21,number])\n",
+    "diag_PMBCO = np.zeros([timestep,21,number])\n",
+    "\n",
+    "diag_HNO3 = np.zeros([timestep,21,number])\n",
+    "diag_H2O2 = np.zeros([timestep,21,number])\n",
+    "diag_u = np.zeros([timestep,21,number])\n",
+    "diag_v = np.zeros([timestep,21,number])\n",
+    "diag_w = np.zeros([timestep,21,number])"
    ]
   },
   {
@@ -333,16 +335,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(720, 21, 50)"
+       "(744, 21, 50)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +374,7 @@
    "outputs": [],
    "source": [
     "savemat(\n",
-    "    'D:/Download/AQ_2306_line3.mat',\n",
+    "    'D:/Download/AQ_2307_line3.mat',\n",
     "    {\n",
     "        'height':diag_ht,\n",
     "        'O3':diag_O3,\n",
